# glm-photometry

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
glm_photometry/: __init__.py  core.py  group_analysis.py  per_solution.py
notebooks/: run_glm_photometry.ipynb
scripts/: run_batch.py  run_batch_deconv.py  run_batch_deconv_zscore.py  run_batch_no_lxs.py  run_decoding_and_splits.py  run_no_lxs_analysis.py  run_per_sol_analysis.py  run_valence_timing.py
